fix hero title align

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -23,6 +23,7 @@
     font-size: 50px;
     font-weight: 900;
     margin-top: 40px;
+    text-align: center;
     margin-bottom: 33px;
     font-family: var(--font-robot);
     background: linear-gradient(90deg, rgba(255,255,255,1) 70%, rgba(255,255,255,0) 120%);
@@ -34,6 +35,7 @@
     font-size: 30px;
     font-family: var(--font-robot);
     margin: 32px;
+    text-align: center;
 }
 
 .heroBtn {
